values/helloworld/helloworld-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-service
  namespace: default
spec:
  selector:
    app: helloworld
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
